# CmakeExampleLib

./: CMakeLists.txt
cmake/: GTest.cmake
include/ExampleLib/: ExampleObj.hpp
src/ExampleLib/: ExampleObj.cpp
test/: CMakeLists.txt
test/ExampleLib/: CMakeLists.txt  ExampleObjTest.cpp  ExampleObjTest.hpp
